🐛 FIX: overflowing menu

--- a/packages/web/styles/base.css
+++ b/packages/web/styles/base.css
@@ -61,11 +61,11 @@ body {
   /**/
 }
 
-@media (max-width: 520px) {
+/* @media (max-width: 520px) {
   .menubar {
     overflow-x: scroll;
   }
-}
+} */
 
 .top-menu ul li {
   display: inline;
